--- a/privacy.html
+++ b/privacy.html
@@ -113,10 +113,11 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
         measures in particular:<br>
 
         Access to personal data requires the use of a user name and password. <br>
-        If I receive data via email my email service requires use of a username and password and has an HTTPS connection. <br>
+        If I receive data via email my email service requires use of a username and password and has an HTTPS
+        connection. <br>
         This site uses an HTTPS connection.<br>
         We keep logs of all requests for personal data<br><br>
-       
+
 
         Linked Websites<br><br>
 
@@ -177,36 +178,37 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
 
         Cookies are text files placed on your computer to collect standard Internet log information and visitor behavior
         information. When you visit our websites, we may collect information from you automatically through cookies or
-        similar technology<br>
+        similar technology<br><br>
 
-        How do we use cookies?
+        How do we use cookies?<br><br>
+        The site has a cookie to mark if you accepted the privacy policy and terms of the website. The cookie just marks
+        whether it was accepted or not.<br><br>
 
-        Our Company uses cookies in a range of ways to improve your experience on our website, including:
 
 
-        What types of cookies do we use?
+        What types of cookies do we use?<br><br>
 
-        There are a number of different types of cookies, however, our website uses:
+        There are a number of different types of cookies, however, our website uses:<br>
 
         Functionality – Our Company uses these cookies so that we recognize you on our website and remember your
         previously
-        selected preferences.
+        selected preferences.<br><br>
 
-        How to manage cookies
+        How to manage cookies<br>
 
         You can set your browser not to accept cookies, However, in a few cases, some of our website features may not
-        function as a result.
+        function as a result.<br><br>
 
-        Privacy policies of other websites
+        Privacy policies of other websites<br><br>
 
         The Our Company website contains links to other websites. Our privacy policy applies only to our website, so if
         you
-        click on a link to another website, you should read their privacy policy.
+        click on a link to another website, you should read their privacy policy.<br>
 
-        Changes to our privacy policy
+        Changes to our privacy policy<br><br>
 
         Our Company keeps its privacy policy under regular review and places any updates on this web page. This privacy
-        policy was last updated on 22 May, 2025.
+        policy was last updated on 23 May, 2025.<br><br>
     </p>
 
 </body>
