--- a/index.html
+++ b/index.html
@@ -48,6 +48,33 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
 
     </div>
 
+     <div id="consentBox">
+        <div id="consentContent">
+            <header id="consentHeader">
+                Cookies
+            </header>
+            <p>
+                This site uses cookies to make the site work well
+                for you and so it can be continually improved.
+                <br>The cookies that are necessary to
+                keep the site functioning are always on. You can read more in the 
+                <a href="privacy.html">Privacy Policy</a>
+                and the
+                 <a href="terms.html"> Terms of Service</a>
+                
+            </p>
+            <div class="buttons">
+                <button class="consentButton">
+                    Accept Cookies
+                </button>
+                <button class="rejectButton">
+                    Reject
+                </button>
+            </div>
+        </div>
+    </div>
+    <script src="script.js"></script>
+
 
     <header class="" main-header">
         <nav class="main-nav nav">
