--- a/privacy.html
+++ b/privacy.html
@@ -201,15 +201,22 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
 
         Privacy policies of other websites<br><br>
 
-        The Our Company website contains links to other websites. Our privacy policy applies only to our website, so if
+        The  website contains links to other websites. Our privacy policy applies only to our website, so if
         you
         click on a link to another website, you should read their privacy policy.<br>
 
         Changes to our privacy policy<br><br>
 
-        Our Company keeps its privacy policy under regular review and places any updates on this web page. This privacy
+        Twilight Courier keeps our privacy policy under regular review and places any updates on this web page. This privacy
         policy was last updated on 23 May, 2025.<br><br>
     </p>
+
+          </div>
+        <div class="footer">
+            <p> © Twilight Courier 2022–2025</p>
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="terms.html"> Terms of Service</a>
+        </div>
 
 </body>
 
