--- a/terms.html
+++ b/terms.html
@@ -95,6 +95,13 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
         responsibility for, and will not be liable for, the website being temporarily unavailable due to technical
         issues beyond our control.
     </p>
+
+          </div>
+        <div class="footer">
+            <p> © Twilight Courier 2022–2025</p>
+            <a href="privacy.html">Privacy Policy</a>
+            <a href="terms.html"> Terms of Service</a>
+        </div>
 </body>
 
 </html>
