updated about section bio

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
 
 
 
-<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/hexfont" type="text/css"/> 
+<link rel="stylesheet" media="screen" href="https://fontlibrary.org//face/hexfont" type="text/css" />
 <link rel="stylesheet" href="style.css" />
 <link rel="stylesheet" href="about.css" />
 
@@ -48,7 +48,7 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
 
     </div>
 
-     <div id="consentBox">
+    <div id="consentBox">
         <div id="consentContent">
             <header id="consentHeader">
                 Cookies
@@ -57,11 +57,11 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
                 This site uses cookies to make the site work well
                 for you and so it can be continually improved.
                 <br>The cookies that are necessary to
-                keep the site functioning are always on. You can read more in the 
+                keep the site functioning are always on. You can read more in the
                 <a href="privacy.html">Privacy Policy</a>
                 and the
-                 <a href="terms.html"> Terms of Service</a>
-                
+                <a href="terms.html"> Terms of Service</a>
+
             </p>
             <div class="buttons">
                 <button class="consentButton">
@@ -117,7 +117,9 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
                     I usually do visuals for harder styles of music such as (Hardcore, Hardstyle, Gabber, J-core, Happy
                     Hardcore, Speedcore, Electro, DnB).
                     <br><br>When planning visuals for an event, I enjoy collaborating with event organizers to ensure
-                    that visual design supports the concept and energy of the event.
+                    that visual design is fully supporting the concept and energy of their event. I design visual themes
+                    that fit with the event's marketing as well as assisting with coordinating venue lighting, video
+                    projection, video mapping, and stage design.
 
                     <br><br>I have mixed visuals at Club Kaiku, which is one of the most established nightclubs in
                     Helsinki, frequently hosting international DJs. I was selected to participate in the national VJ
