--- a/privacy.html
+++ b/privacy.html
@@ -32,9 +32,9 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
     <header class="" main-header">
         <nav class="main-nav nav">
             <ul>
-                <li><a href="vj_demo.html">VJ Demos</a></li>
-                <li><a href="#eventP">Event Promotions</a></li>
-                <li><a href="index.html">About</a></li>
+                <li><a href="index.html">VJ Demos</a></li>
+                <li><a href="index.html#eventP">Event Promotions</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
 
         </nav>
