js to get android size from window alert

--- a/about.html
+++ b/about.html
@@ -41,6 +41,8 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
         var x = document.getElementById("demo");
         console.log("width " + w);
         console.log("height " + h);
+        window.alert(w);
+        window.alert(h);
 
     </script>
 
