mobile size media range adjustments1

--- a/about.html
+++ b/about.html
@@ -41,8 +41,6 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
         var x = document.getElementById("demo");
         console.log("width " + w);
         console.log("height " + h);
-        window.alert(w);
-        window.alert(h);
 
     </script>
 
@@ -83,7 +81,7 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
             <ul>
                 <li><a href="index.html">VJ Demos</a></li>
                 <li><a href="index.html#eventP">Event Promotions</a></li>
-                <li><a href="about.html">About</a></li>
+                <li class="about1"><a href="about.html">About</a></li>
             </ul>
 
         </nav>
