--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ audio reactive, Club Kaiku, Twilight Courier, twilightcourier, hardcore VJ, spee
             <ul>
                 <li><a href="index.html">VJ Demos</a></li>
                 <li><a href="index.html#eventP">Event Promotions</a></li>
-                <li><a href="about.html">About</a></li>
+                <li class="about1"><a href="about.html">About</a></li>
             </ul>
 
         </nav>
